--- a/GUI files/styles.css
+++ b/GUI files/styles.css
@@ -24,7 +24,7 @@ h2 {
     z-index:0;
     background-color: #F7D358;
     border-radius: 20px;
-    box-shadow: 3px 25px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 3px 10px 4px 0px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 0;
     left: 0;
@@ -41,7 +41,7 @@ h2 {
     font-size: 30px;
     font-style: normal;
     font-weight: 600;
-    line-height: 70px; /* 83.333% */
+    line-height: 70px;
     margin-left:350px;
     margin-top:20px;
 }
@@ -66,7 +66,7 @@ h2 {
     flex-shrink: 0;
     border-radius: 20px;
     background: linear-gradient(180deg, #6D0C83 0%, #1A1A2E 100%);
-    box-shadow: 3px 30px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 3px 15px 4px 0px rgba(0, 0, 0, 0.25);
     top: 0;
     left: 0px;
     position: absolute;
@@ -77,7 +77,8 @@ h2 {
         margin-bottom: 20px;
         font-size: 20px;
         font-weight: bold;
-
+        color: #6D0C83;
+      
     }
 
 #processForm {
@@ -271,15 +272,15 @@ h2 {
 .gantt-block {
     flex-direction:column;
     display:flex;
-    justify-content: center; /* center horizontally */
-    align-items: center; /* center vertically */
+    justify-content: center;
+    align-items: center; 
     min-width: 60px;
     padding: 10px;
     border-radius: 5px;
     color: white;
     font-weight: bold;
     text-align: center;
-    border: thin solid #ffffff; /* white border */
+    border: thin solid #ffffff; 
 }
 
 .scrollWrapper {
@@ -288,6 +289,31 @@ h2 {
     overflow-y: hidden;
     width: 100%;
 }
+
+    .scrollWrapper::-webkit-scrollbar {
+        height: 6px; 
+        width: 6px; 
+    }
+
+    .scrollWrapper::-webkit-scrollbar-track {
+        background: #1e1e1e;
+    }
+
+    .scrollWrapper::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 4px;
+    }
+
+        .scrollWrapper::-webkit-scrollbar-thumb:hover {
+            background-color: #555;
+        }
+
+/* Firefox */
+.scrollWrapper {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #1e1e1e;
+}
+
 
 input:disabled {
     background-color: #333;
@@ -337,8 +363,18 @@ input:disabled {
         margin-left: 350px;
         margin-top: 30px;
         border-radius:10px;
-        width:1000px;
+        width:1025px;
         height: 80px;
         color: white;
     }
+
+.metrics averageMetrics {
+    width: 300px;
+    height: 80px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #6D0C83 0%, #1A1A2E 100%);
+    box-shadow: 3px 15px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 20px;
+}
   
